--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+
+*{
+    margin: 0;
+    padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body{
+    width: 1920px;
+    height: 2726px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.blue_article{
+    position: relative;
+    width: 1920px;
+    height: 2726px;
+    background: #44599F;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.gray_article{
+    position: absolute;
+    width: 1920px;
+    height: 1252px;
+    left: 0px;
+    top: 991px;
+    background: #F7F7F7;
+    box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.03);
+    border-radius: 50px 50px 0px 0px;
 }
 
-.App-link {
-  color: #61dafb;
-}
+body{ -ms-overflow-style: none; } 
+::-webkit-scrollbar { display: none; }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
