--- a/src/App.css
+++ b/src/App.css
@@ -5,26 +5,9 @@
 }
 
 html, body{
-    width: 1920px;
-    height: 2726px;
-}
-
-.blue_article{
-    position: relative;
-    width: 1920px;
-    height: 2726px;
-    background: #44599F;
-}
-
-.gray_article{
-    position: absolute;
-    width: 1920px;
-    height: 1252px;
-    left: 0px;
-    top: 991px;
-    background: #F7F7F7;
-    box-shadow: 0px -10px 10px rgba(0, 0, 0, 0.03);
-    border-radius: 50px 50px 0px 0px;
+    width: 100vw;
+    height: 272.6rem;
+    font-size: 55%;
 }
 
 body{ -ms-overflow-style: none; } 
