--- a/src/BlueArticle.css
+++ b/src/BlueArticle.css
@@ -1,153 +1,197 @@
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
+.blue_article{
+    position: relative;
+    width: 100vw;
+    height: 272.6rem;
+    background: #44599F;
+}
 
 .phone{
     position: absolute;
-    left: 1014px;
-    top: 162px;
+    width: 78.2rem;
+    height: 75.6rem;
+    left: 107.4rem;
+    top: 16.2rem;
     filter: drop-shadow(4px 4px 4px rgba(0, 0, 0, 0.1));
 }
 
 .speaker{
     position: absolute;
-    left: 187px;
-    top:162px;
+    width: 15.8rem;
+    height: 22.9rem;
+    left: 18.7rem;
+    top:16.2rem;
 }
 
 .poly_1{
     position: absolute;
-    left: 600px;
-    top:100px;
+    width: 71.8rem;
+    height: 55.8rem;
+    left: 60rem;
+    top:10rem;
 }
 
 .poly_4{
     position: absolute;
-    left: 130px;
-    top:480px;
+    width: 24.3rem;
+    height: 31.2rem;
+    left: 13rem;
+    top:48rem;
 }
 
 .poly_6{
     position: absolute;
-    left: 300px;
+    width: 30.9rem;
+    height: 24.3rem;
+    left: 30rem;
 }
 
 .poly_7{
     position: absolute;
-    left: 1400px;
+    width: 30.9rem;
+    height:10.7rem;
+    left: 140rem;
 }
 
 .poly_7_2{
     position: absolute;
-    left: 810px;
-    top:870px;
+    width: 17.1rem;
+    height: 25.9rem;
+    left: 81rem;
+    top:87rem;
 }
 
 .poly_5{
     position: absolute;
-    left: 1550px;
-    top:550px;
+    width: 31.2rem;
+    height: 24.3rem;
+    left: 155rem;
+    top:55rem;
 }
 
 .logo{
     position: absolute;
-    width: 64px;
-    height: 70px;
-    left:56px;
-    top:40px;
+    width: 6.4rem;
+    height: 7.1rem;
+    left:5.6rem;
+    top:4rem;
 }
 
 .Notissu{
     position: absolute;
-    left: 130px;
-    top: 52px;
+    left: 13rem;
+    top: 5.2rem;
     
     font-family:"Noto Sans KR";
     font-style: normal;
     font-weight: 900;
-    font-size: 32px;
-    line-height: 47px;
-    letter-spacing :0.5px;
+    font-size: 3.2rem;
+    line-height: 4.7rem;
+    letter-spacing :0.05rem;
     color: #FFFFFF;
 }
 
 .ment{
     position: absolute;
-    width: 254px;
-    height: 272px;
-    left: 218px;
-    top: 373px;
+    width: 25.4rem;
+    height: 27.2rem;
+    left: 21.8rem;
+    top: 37.3rem;
     font-family:"Noto Sans KR";
     font-style: normal;
     font-weight: 900;
-    font-size: 92px;
-    line-height: 136px;
+    font-size: 9.2rem;
+    line-height: 13.6rem;
     color: #FFFFFF;
 }
 
 .ment2{ 
     position: absolute;
-    left: 218px;
-    top: 670px;
+    width: 33.7rem;
+    height: 9.1rem;
+    left: 21.8rem;
+    top: 66rem;
 }
 
 .google{
     position: absolute;
-    width: 317px;
-    height: 87px;
-    left: 222px;
-    top: 829px;
+    width: 31.7rem;
+    height: 8.7rem;
+    left: 22.2rem;
+    top: 82.9rem;
 
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
-    border-radius: 15px;
+    border-radius: 1.5rem;
 }
 
 .apple{
     position: absolute;
-    width: 317px;
-    height: 87px;
-    left: 602px;
-    top: 829px;
+    width: 31.7rem;
+    height: 8.7rem;
+    left: 60.2rem;
+    top: 82.9rem;
     
     border: 1px solid #FFFFFF;
     box-sizing: border-box;
-    border-radius: 15px;
+    border-radius: 1.5rem;
 }
 
 .google_img{
     position: absolute;
-    top: 17px;
-    left: 30px;
+    width: 5rem;
+    height: 5rem;
+    top: 1.7rem;
+    left: 3rem;
 }
 
 .apple_img{
     position: absolute;
-    top:13px;
-    left: 50px;
+    width: 4.4rem;
+    height: 5.5rem;
+    top:1.3rem;
+    left: 5rem;
 }
 
 .apple_ment{
     position: absolute;
-    left: 120px;
-    top: 17px;
-
+    left: 12rem;
+    top: 1.7rem;
     font-family: "Noto Sans KR";
     font-style: normal;
     font-weight: 500;
-    font-size: 30px;
-    line-height: 44px;
-    
+    font-size: 3rem;
+    line-height: 4.4rem;
     color: #FFFFFF;
 }
 
 .google_ment{
     position: absolute;
-    left: 110px;
-    top: 17px;
+    left: 11rem;
+    top: 1.7rem;
     font-family: "Noto Sans KR";
     font-style: normal;
     font-weight: 500;
-    font-size: 30px;
-    line-height: 44px;
+    font-size: 3rem;
+    line-height: 4.4rem;
     text-decoration: none;
     color: #FFFFFF;
 }
+
+@media (max-width: 769px){
+    html{
+        font-size: 4px;
+    }
+}
+
+@media (min-width: 770px) and (max-width: 1200px) {
+    html {
+      font-size: 55% !important;
+    }
+}
+
+@media (min-width: 1200px) {
+    html {
+      font-size: 55%;
+    }
+  }
